Fix ksgrd_network_helper crash on exit afer a failure

On an early return in main, the ConnectionMapping thread was destroyed without being
properly joined, leading to an abort.
So ConnectionMapping::stop has been changed into a destructor.

m_running is also now set from the main thread, to ensure any early destruction while the
thread is starting stops it properly.

BUG: 444921