processcore/plugins/network/helper/main.cpp
@@ -88,7 +88,6 @@ int main(int argc, char **argv)
 
     accumulator->stop();
     capture->stop();
-    mapping->stop();
 
     return 0;
 }
